log/build_2026-03-16_09-50-10/my_first_package/stderr.log
  File "/home/kyujin/ros2_study/install/my_first_package/lib/python3.10/site-packages/my_first_package/my_service_server.py", line 33
    		forn in range(len(theta()):
    		                          ^
SyntaxError: invalid syntax

